[gd_scene load_steps=110 format=2]

[ext_resource path="res://Assets/Fonts/FridayNightFunkin-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Menus/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0018.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0020.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0021.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0019.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0028.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0027.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0026.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0022.png" type="Texture" id=10]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0024.png" type="Texture" id=11]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0025.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0023.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0005.png" type="Texture" id=14]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0007.png" type="Texture" id=15]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0001.png" type="Texture" id=16]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0004.png" type="Texture" id=17]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0008.png" type="Texture" id=18]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0006.png" type="Texture" id=19]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0009.png" type="Texture" id=20]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0002.png" type="Texture" id=21]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0003.png" type="Texture" id=22]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0015.png" type="Texture" id=23]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0016.png" type="Texture" id=24]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0017.png" type="Texture" id=25]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0014.png" type="Texture" id=26]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0010.png" type="Texture" id=27]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0011.png" type="Texture" id=28]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0012.png" type="Texture" id=29]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0013.png" type="Texture" id=30]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0002.png" type="Texture" id=31]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0037.png" type="Texture" id=32]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0038.png" type="Texture" id=33]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0040.png" type="Texture" id=34]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0001.png" type="Texture" id=35]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0020.png" type="Texture" id=36]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0042.png" type="Texture" id=37]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0029.png" type="Texture" id=38]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0041.png" type="Texture" id=39]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/EnterPressed/ENTER PRESSED0003.png" type="Texture" id=40]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0007.png" type="Texture" id=41]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0008.png" type="Texture" id=42]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0044.png" type="Texture" id=43]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0029.png" type="Texture" id=44]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0012.png" type="Texture" id=45]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0023.png" type="Texture" id=46]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0043.png" type="Texture" id=47]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/EnterPressed/ENTER PRESSED0002.png" type="Texture" id=48]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0004.png" type="Texture" id=49]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0010.png" type="Texture" id=50]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0028.png" type="Texture" id=51]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0035.png" type="Texture" id=52]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/EnterPressed/ENTER PRESSED0004.png" type="Texture" id=53]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/EnterPressed/ENTER PRESSED0005.png" type="Texture" id=54]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0026.png" type="Texture" id=55]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/EnterPressed/ENTER PRESSED0007.png" type="Texture" id=56]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0045.png" type="Texture" id=57]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/EnterPressed/ENTER PRESSED0008.png" type="Texture" id=58]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/EnterPressed/ENTER PRESSED0009.png" type="Texture" id=59]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/EnterPressed/ENTER PRESSED0006.png" type="Texture" id=60]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/EnterPressed/ENTER PRESSED0001.png" type="Texture" id=61]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/TitleScreenBumpin/Start Screen BG art0030.png" type="Texture" id=62]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0018.png" type="Texture" id=63]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0009.png" type="Texture" id=64]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0032.png" type="Texture" id=65]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0039.png" type="Texture" id=66]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0016.png" type="Texture" id=67]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0003.png" type="Texture" id=68]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0034.png" type="Texture" id=69]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0019.png" type="Texture" id=70]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0017.png" type="Texture" id=71]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0031.png" type="Texture" id=72]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0005.png" type="Texture" id=73]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0011.png" type="Texture" id=74]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0021.png" type="Texture" id=75]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0022.png" type="Texture" id=76]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0027.png" type="Texture" id=77]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0033.png" type="Texture" id=78]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0006.png" type="Texture" id=79]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0015.png" type="Texture" id=80]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0024.png" type="Texture" id=81]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0013.png" type="Texture" id=82]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0025.png" type="Texture" id=83]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0030.png" type="Texture" id=84]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0036.png" type="Texture" id=85]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/PressEnterToBegin/Press Enter to Begin0014.png" type="Texture" id=86]
[ext_resource path="res://Scenes/Characters/Girlfriend.tscn" type="PackedScene" id=87]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0015.png" type="Texture" id=91]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0010.png" type="Texture" id=92]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0013.png" type="Texture" id=93]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0003.png" type="Texture" id=97]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0006.png" type="Texture" id=98]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0011.png" type="Texture" id=99]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0001.png" type="Texture" id=107]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0009.png" type="Texture" id=108]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0002.png" type="Texture" id=109]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0014.png" type="Texture" id=112]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0004.png" type="Texture" id=116]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0007.png" type="Texture" id=122]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0008.png" type="Texture" id=128]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0005.png" type="Texture" id=129]
[ext_resource path="res://Assets/Menus/AnimatedSprites/TitleScreen/logo bump/logo bumpin0012.png" type="Texture" id=130]
[ext_resource path="res://mobile_controls/Enter.tscn" type="PackedScene" id=132]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 26 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 44 ), ExtResource( 62 ) ],
"loop": true,
"name": "Bumpin",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 107 ), ExtResource( 109 ), ExtResource( 97 ), ExtResource( 116 ), ExtResource( 129 ), ExtResource( 98 ), ExtResource( 122 ), ExtResource( 128 ), ExtResource( 108 ), ExtResource( 92 ), ExtResource( 99 ), ExtResource( 130 ), ExtResource( 93 ), ExtResource( 112 ), ExtResource( 91 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 31 ), ExtResource( 68 ), ExtResource( 49 ), ExtResource( 73 ), ExtResource( 79 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 64 ), ExtResource( 50 ), ExtResource( 74 ), ExtResource( 45 ), ExtResource( 82 ), ExtResource( 86 ), ExtResource( 80 ), ExtResource( 67 ), ExtResource( 71 ), ExtResource( 63 ), ExtResource( 70 ), ExtResource( 36 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 46 ), ExtResource( 81 ), ExtResource( 83 ), ExtResource( 55 ), ExtResource( 77 ), ExtResource( 51 ), ExtResource( 38 ), ExtResource( 84 ), ExtResource( 72 ), ExtResource( 65 ), ExtResource( 78 ), ExtResource( 69 ), ExtResource( 52 ), ExtResource( 85 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 66 ), ExtResource( 34 ), ExtResource( 39 ), ExtResource( 37 ), ExtResource( 47 ), ExtResource( 43 ), ExtResource( 57 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 61 ), ExtResource( 48 ), ExtResource( 40 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 60 ), ExtResource( 56 ), ExtResource( 58 ), ExtResource( 59 ) ],
"loop": true,
"name": "selected",
"speed": 5.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "EnterFlash"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bumpin" type="AnimatedSprite" parent="."]
position = Vector2( 469.5, 259.5 )
scale = Vector2( 0.795552, 0.82303 )
z_index = -2
frames = SubResource( 1 )
animation = "Bumpin"

[node name="Version" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -42.0
margin_right = 68.0
custom_colors/default_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[wave][rainbow freq=0.1]v1.1"
text = "v1.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gflayer" type="CanvasLayer" parent="."]
layer = 0

[node name="gf" type="Node2D" parent="gflayer"]
position = Vector2( 928, 599 )

[node name="Girlfriend" parent="gflayer/gf" instance=ExtResource( 87 )]

[node name="logo" type="AnimatedSprite" parent="."]
position = Vector2( 357.18, 266.924 )
scale = Vector2( 1.05703, 1.05703 )
frames = SubResource( 4 )
frame = 13

[node name="Tween" type="Tween" parent="logo"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PressEnterText" type="AnimatedSprite" parent="CanvasLayer"]
position = Vector2( 1025, 640 )
scale = Vector2( 1.3, 1.3 )
z_index = -1
frames = SubResource( 5 )
frame = 44
speed_scale = 3.0
playing = true

[node name="Flash" type="CanvasLayer" parent="."]
layer = 2

[node name="WhiteFlash" type="ColorRect" parent="Flash"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteFlashFade" type="AnimationPlayer" parent="Flash/WhiteFlash"]
autoplay = "WhiteFlash"
anims/EnterFlash = SubResource( 6 )
anims/WhiteFlash = SubResource( 7 )

[node name="CanvasLayer2" parent="." instance=ExtResource( 132 )]
